# kspaceduel

./: .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  Messages.sh  README  TODO  ai.cpp  ai.h  configure.in.in  default_theme.svgz  defines.h  dialogs.cpp  dialogs.h  duelwidget.cpp  duelwidget.h  general.ui  kspaceduel.desktop  kspaceduel.kcfg  kspaceduel.kdelnk  kspaceduel.xpm  kspaceduelui.rc  main.cpp  mainview.cpp  mainview.h  mathroutines.cpp  mathroutines.h  mini-kspaceduel.xpm  options.kcfgc  org.kde.kspaceduel.appdata.xml  org.kde.kspaceduel.desktop  playerinfo.cpp  playerinfo.h  snapcraft.yaml  spritebase.cpp  spritebase.h  sprites.cpp  (+5 more)
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml
html/: Makefile.in  index-3.html  index-5.html
html/de/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index.html
icons/: CMakeLists.txt
pics/: CMakeLists.txt  Makefile.am
po/af/: kspaceduel.po
po/ar/: kspaceduel.po
po/ast/: kspaceduel.po
po/be/: kspaceduel.po
po/bg/: kspaceduel.po
po/br/: kspaceduel.po
po/bs/: kspaceduel.po
po/ca/: kspaceduel.po
po/ca/docs/kspaceduel/: index.docbook
po/ca@valencia/: kspaceduel.po
po/cs/: kspaceduel.po
po/cy/: kspaceduel.po
po/da/: kspaceduel.po
po/de/: kspaceduel.po
po/de/docs/kspaceduel/: index.docbook
po/el/: kspaceduel.po
po/en_GB/: kspaceduel.po
po/eo/: kspaceduel.po
po/es/: kspaceduel.po
po/es/docs/kspaceduel/: index.docbook
po/et/: kspaceduel.po
po/et/docs/kspaceduel/: index.docbook
po/eu/: kspaceduel.po
po/fa/: kspaceduel.po
po/fi/: kspaceduel.po
po/fr/: kspaceduel.po
po/fr/docs/kspaceduel/: index.docbook
po/ga/: kspaceduel.po
po/gl/: kspaceduel.po
po/he/: kspaceduel.po
po/hi/: kspaceduel.po
po/hne/: kspaceduel.po
po/hr/: kspaceduel.po
po/hu/: kspaceduel.po
po/ia/: kspaceduel.po
po/is/: kspaceduel.po
po/it/: kspaceduel.po
po/it/docs/kspaceduel/: index.docbook
po/ja/: kspaceduel.po
po/ka/: kspaceduel.po
po/kk/: kspaceduel.po
po/km/: kspaceduel.po
po/ko/: kspaceduel.po
po/lt/: kspaceduel.po
po/lv/: kspaceduel.po
po/mai/: kspaceduel.po
po/mk/: kspaceduel.po
po/ml/: kspaceduel.po
po/mr/: kspaceduel.po
po/nb/: kspaceduel.po
po/nds/: kspaceduel.po
po/ne/: kspaceduel.po
po/nl/: kspaceduel.po
po/nl/docs/kspaceduel/: index.docbook
po/nn/: kspaceduel.po
po/oc/: kspaceduel.po
po/pa/: kspaceduel.po
po/pl/: kspaceduel.po
po/pt/: kspaceduel.po
po/pt/docs/kspaceduel/: index.docbook
po/pt_BR/: kspaceduel.po
po/pt_BR/docs/kspaceduel/: index.docbook
po/ro/: kspaceduel.po
po/ru/: kspaceduel.po
po/ru/docs/kspaceduel/: index.docbook
po/sa/: kspaceduel.po
po/se/: kspaceduel.po
po/sk/: kspaceduel.po
po/sl/: kspaceduel.po
po/sl/docs/kspaceduel/: index.docbook
po/sq/: kspaceduel.po
po/sr/: kspaceduel.po
po/sr@ijekavian/: kspaceduel.po
po/sr@ijekavianlatin/: kspaceduel.po
po/sr@latin/: kspaceduel.po
po/sv/: kspaceduel.po
po/sv/docs/kspaceduel/: index.docbook
po/ta/: kspaceduel.po
po/tg/: kspaceduel.po
po/tr/: kspaceduel.po
po/ug/: kspaceduel.po
po/uk/: kspaceduel.po
po/uk/docs/kspaceduel/: index.docbook
po/xh/: kspaceduel.po
po/zh_CN/: kspaceduel.po
po/zh_TW/: kspaceduel.po
sprites/: CMakeLists.txt  Makefile.am  Makefile.in
sprites/explosion/: CMakeLists.txt  Makefile.am  Makefile.in  explos00.pbm  explos00.ppm  explos01.pbm  explos01.ppm  explos02.pbm  explos02.ppm  explos03.pbm  explos03.ppm  explos04.pbm  explos04.ppm  explos05.pbm  explos05.ppm  explos06.pbm  explos06.ppm  explos07.pbm  explos07.ppm  explos08.pbm  explos08.ppm  explos09.pbm  explos09.ppm  explos10.pbm  explos10.ppm  explos11.pbm  explos11.ppm  explos12.pbm  explos12.ppm  explos13.pbm  explos13.ppm  explos14.pbm  explos14.ppm  explos15.pbm  explos15.ppm  explos16.pbm  explos16.ppm  explos17.pbm  explos17.ppm  explos18.pbm  (+59 more)
sprites/playerinfo/: CMakeLists.txt  Makefile.am  Makefile.in  energy.pnm  mine.pnm  ship10.pnm  ship11.pnm  ship12.pnm  ship13.pnm  ship20.pnm  ship21.pnm  ship22.pnm  ship23.pnm  win.pnm
sprites/poverups/: Makefile.am  penergy.ppm  pmine.ppm  pshield.pbm  pshield.ppm
sprites/powerups/: CMakeLists.txt  Makefile  Makefile.am  pbullet.ppm
sprites/ship1/: CMakeLists.txt  Makefile.am  Makefile.in  bullet.ppm  mine0.pbm  mine0.ppm  mine1.pbm  mine1.ppm  ship00.pbm  ship00.ppm  ship01.pbm  ship01.ppm  ship02.pbm  ship02.ppm  ship03.pbm  ship03.ppm  ship04.pbm  ship04.ppm  ship05.pbm  ship05.ppm  ship06.pbm  ship06.ppm  ship07.pbm  ship07.ppm  ship08.pbm  ship08.ppm  ship09.pbm  ship09.ppm  ship10.pbm  ship10.ppm  ship11.pbm  ship11.ppm  ship12.pbm  ship12.ppm  ship13.pbm  ship13.ppm  ship14.pbm  ship14.ppm  ship15.pbm  ship15.ppm  (+98 more)
sprites/ship2/: CMakeLists.txt  Makefile.am  Makefile.in  bullet.pbm  bullet.ppm  mine0.pbm  mine0.ppm  mine1.pbm  mine1.ppm  ship00.pbm  ship00.ppm  ship01.pbm  ship01.ppm  ship02.pbm  ship02.ppm  ship03.pbm  ship03.ppm  ship04.pbm  ship04.ppm  ship05.pbm  ship05.ppm  ship06.pbm  ship06.ppm  ship07.pbm  ship07.ppm  ship08.pbm  ship08.ppm  ship09.pbm  ship09.ppm  ship10.pbm  ship10.ppm  ship11.pbm  ship11.ppm  ship12.pbm  ship12.ppm  ship13.pbm  ship13.ppm  ship14.pbm  ship14.ppm  ship15.pbm  (+98 more)
sprites/sun/: CMakeLists.txt  Makefile.am  Makefile.in  sun.pbm  sun.ppm
src/: CMakeLists.txt  ai.cpp  ai.h  defines.h  dialogs.cpp  dialogs.h  general.ui  kspaceduel.kcfg  kspaceduel.qrc  kspaceduelui.rc  main.cpp  mainview.cpp  org.kde.kspaceduel.appdata.xml  org.kde.kspaceduel.desktop  playerinfo.cpp  playerinfo.h  spritebase.cpp  spritebase.h  structs.h  topwidget.cpp
