
expldir = $(kde_datadir)/kspaceduel/sprites/explosion

expl_DATA = explos00.pbm  explos10.pbm  explos20.pbm  explos30.pbm  mineex09.pbm \
	explos00.ppm  explos10.ppm  explos20.ppm  explos30.ppm  mineex09.ppm \
	explos01.pbm  explos11.pbm  explos21.pbm  mineex00.pbm  mineex10.pbm \
	explos01.ppm  explos11.ppm  explos21.ppm  mineex00.ppm  mineex10.ppm \
	explos02.pbm  explos12.pbm  explos22.pbm  mineex01.pbm  mineex11.pbm \
	explos02.ppm  explos12.ppm  explos22.ppm  mineex01.ppm  mineex11.ppm \
	explos03.pbm  explos13.pbm  explos23.pbm  mineex02.pbm  mineex12.pbm \
	explos03.ppm  explos13.ppm  explos23.ppm  mineex02.ppm  mineex12.ppm \
	explos04.pbm  explos14.pbm  explos24.pbm  mineex03.pbm  mineex13.pbm \
	explos04.ppm  explos14.ppm  explos24.ppm  mineex03.ppm  mineex13.ppm \
	explos05.pbm  explos15.pbm  explos25.pbm  mineex04.pbm  mineex14.pbm \
	explos05.ppm  explos15.ppm  explos25.ppm  mineex04.ppm  mineex14.ppm \
	explos06.pbm  explos16.pbm  explos26.pbm  mineex05.pbm  mineex15.pbm \
	explos06.ppm  explos16.ppm  explos26.ppm  mineex05.ppm  mineex15.ppm \
	explos07.pbm  explos17.pbm  explos27.pbm  mineex06.pbm  mineex16.pbm \
	explos07.ppm  explos17.ppm  explos27.ppm  mineex06.ppm  mineex16.ppm \
	explos08.pbm  explos18.pbm  explos28.pbm  mineex07.pbm  mineex17.pbm \
	explos08.ppm  explos18.ppm  explos28.ppm  mineex07.ppm  mineex17.ppm \
	explos09.pbm  explos19.pbm  explos29.pbm  mineex08.pbm \
	explos09.ppm  explos19.ppm  explos29.ppm  mineex08.ppm

EXTRA_DIST = $(expl_DATA)
