
expldir = $(kde_datadir)/kspaceduel/sprites/explosion

expl_DATA = \
explos00.pbm explos00.ppm explos01.pbm explos01.ppm explos02.pbm \
explos02.ppm explos03.pbm explos03.ppm explos04.pbm explos04.ppm \
explos05.pbm explos05.ppm explos06.pbm explos06.ppm explos07.pbm \
explos07.ppm explos08.pbm explos08.ppm explos09.pbm explos09.ppm \
explos10.pbm explos10.ppm explos11.pbm explos11.ppm explos12.pbm \
explos12.ppm explos13.pbm explos13.ppm explos14.pbm explos14.ppm \
explos15.pbm explos15.ppm explos16.pbm explos16.ppm explos17.pbm \
explos17.ppm explos18.pbm explos18.ppm explos19.pbm explos19.ppm \
explos20.pbm explos20.ppm explos21.pbm explos21.ppm explos22.pbm \
explos22.ppm explos23.pbm explos23.ppm explos24.pbm explos24.ppm \
explos25.pbm explos25.ppm explos26.pbm explos26.ppm explos27.pbm \
explos27.ppm explos28.pbm explos28.ppm explos29.pbm explos29.ppm \
explos30.pbm explos30.ppm mineex00.pbm mineex00.ppm mineex01.pbm \
mineex01.ppm mineex02.pbm mineex02.ppm mineex03.pbm mineex03.ppm \
mineex04.pbm mineex04.ppm mineex05.pbm mineex05.ppm mineex06.pbm \
mineex06.ppm mineex07.pbm mineex07.ppm mineex08.pbm mineex08.ppm \
mineex09.pbm mineex09.ppm mineex10.pbm mineex10.ppm mineex11.pbm \
mineex11.ppm mineex12.pbm mineex12.ppm mineex13.pbm mineex13.ppm \
mineex14.pbm mineex14.ppm mineex15.pbm mineex15.ppm mineex16.pbm \
mineex16.ppm mineex17.pbm mineex17.ppm

EXTRA_DIST = $(expl_DATA)
