



########### install files ###############

install( FILES energy.png mine.png ship10.png ship11.png ship12.png ship13.png ship20.png  ship21.png ship22.png ship23.png win.png  DESTINATION  ${DATA_INSTALL_DIR}/kspaceduel/sprites/playerinfo )




#original Makefile.am contents follow:

#playerdir = $(kde_datadir)/kspaceduel/sprites/playerinfo
#player_DATA = \
#energy.pnm mine.pnm ship10.pnm ship11.pnm ship12.pnm ship13.pnm ship20.pnm \
#ship21.pnm ship22.pnm ship23.pnm win.pnm
#
#EXTRA_DIST = $(player_DATA)
