



########### install files ###############

install( FILES pbullet.png penergy.png pmine.png pshield.png  DESTINATION  ${DATA_INSTALL_DIR}/kspaceduel/sprites/powerups )




#original Makefile.am contents follow:

#powerdir = $(kde_datadir)/kspaceduel/sprites/powerups
#power_DATA = \
#pbullet.pbm pbullet.ppm penergy.pbm penergy.ppm pmine.pbm pmine.ppm \
#pshield.pbm pshield.ppm
#EXTRA_DIST = $(power_DATA)
