ship1dir = $(kde_datadir)/kspaceduel/sprites/ship1
ship1_DATA =  \
bullet.pbm bullet.ppm mine0.pbm mine0.ppm mine1.pbm mine1.ppm ship00.pbm \
ship00.ppm ship01.pbm ship01.ppm ship02.pbm ship02.ppm ship03.pbm \
ship03.ppm ship04.pbm ship04.ppm ship05.pbm ship05.ppm ship06.pbm \
ship06.ppm ship07.pbm ship07.ppm ship08.pbm ship08.ppm ship09.pbm \
ship09.ppm ship10.pbm ship10.ppm ship11.pbm ship11.ppm ship12.pbm \
ship12.ppm ship13.pbm ship13.ppm ship14.pbm ship14.ppm ship15.pbm \
ship15.ppm ship16.pbm ship16.ppm ship17.pbm ship17.ppm ship18.pbm \
ship18.ppm ship19.pbm ship19.ppm ship20.pbm ship20.ppm ship21.pbm \
ship21.ppm ship22.pbm ship22.ppm ship23.pbm ship23.ppm ship24.pbm \
ship24.ppm ship25.pbm ship25.ppm ship26.pbm ship26.ppm ship27.pbm \
ship27.ppm ship28.pbm ship28.ppm ship29.pbm ship29.ppm ship30.pbm \
ship30.ppm ship31.pbm ship31.ppm ship32.pbm ship32.ppm ship33.pbm \
ship33.ppm ship34.pbm ship34.ppm ship35.pbm ship35.ppm ship36.pbm \
ship36.ppm ship37.pbm ship37.ppm ship38.pbm ship38.ppm ship39.pbm \
ship39.ppm ship40.pbm ship40.ppm ship41.pbm ship41.ppm ship42.pbm \
ship42.ppm ship43.pbm ship43.ppm ship44.pbm ship44.ppm ship45.pbm \
ship45.ppm ship46.pbm ship46.ppm ship47.pbm ship47.ppm ship48.pbm \
ship48.ppm ship49.pbm ship49.ppm ship50.pbm ship50.ppm ship51.pbm \
ship51.ppm ship52.pbm ship52.ppm ship53.pbm ship53.ppm ship54.pbm \
ship54.ppm ship55.pbm ship55.ppm ship56.pbm ship56.ppm ship57.pbm \
ship57.ppm ship58.pbm ship58.ppm ship59.pbm ship59.ppm ship60.pbm \
ship60.ppm ship61.pbm ship61.ppm ship62.pbm ship62.ppm ship63.pbm \
ship63.ppm ship64.pbm ship64.ppm
