ship2dir = $(kde_datadir)/kspaceduel/sprites/ship2
ship2_DATA = bullet.pbm  ship08.ppm  ship20.pbm  ship31.ppm  ship43.pbm  ship54.ppm \
	bullet.ppm  ship09.pbm  ship20.ppm  ship32.pbm  ship43.ppm  ship55.pbm \
	mine0.pbm   ship09.ppm  ship21.pbm  ship32.ppm  ship44.pbm  ship55.ppm \
	mine0.ppm   ship10.pbm  ship21.ppm  ship33.pbm  ship44.ppm  ship56.pbm \
	mine1.pbm   ship10.ppm  ship22.pbm  ship33.ppm  ship45.pbm  ship56.ppm \
	mine1.ppm   ship11.pbm  ship22.ppm  ship34.pbm  ship45.ppm  ship57.pbm \
	ship00.pbm  ship11.ppm  ship23.pbm  ship34.ppm  ship46.pbm  ship57.ppm \
	ship00.ppm  ship12.pbm  ship23.ppm  ship35.pbm  ship46.ppm  ship58.pbm \
	ship01.pbm  ship12.ppm  ship24.pbm  ship35.ppm  ship47.pbm  ship58.ppm \
	ship01.ppm  ship13.pbm  ship24.ppm  ship36.pbm  ship47.ppm  ship59.pbm \
	ship02.pbm  ship13.ppm  ship25.pbm  ship36.ppm  ship48.pbm  ship59.ppm \
	ship02.ppm  ship14.pbm  ship25.ppm  ship37.pbm  ship48.ppm  ship60.pbm \
	ship03.pbm  ship14.ppm  ship26.pbm  ship37.ppm  ship49.pbm  ship60.ppm \
	ship03.ppm  ship15.pbm  ship26.ppm  ship38.pbm  ship49.ppm  ship61.pbm \
	ship04.pbm  ship15.ppm  ship27.pbm  ship38.ppm  ship50.pbm  ship61.ppm \
	ship04.ppm  ship16.pbm  ship27.ppm  ship39.pbm  ship50.ppm  ship62.pbm \
	ship05.pbm  ship16.ppm  ship28.pbm  ship39.ppm  ship51.pbm  ship62.ppm \
	ship05.ppm  ship17.pbm  ship28.ppm  ship40.pbm  ship51.ppm  ship63.pbm \
	ship06.pbm  ship17.ppm  ship29.pbm  ship40.ppm  ship52.pbm  ship63.ppm \
	ship06.ppm  ship18.pbm  ship29.ppm  ship41.pbm  ship52.ppm  ship64.pbm \
	ship07.pbm  ship18.ppm  ship30.pbm  ship41.ppm  ship53.pbm  ship64.ppm \
	ship07.ppm  ship19.pbm  ship30.ppm  ship42.pbm  ship53.ppm \
	ship08.pbm  ship19.ppm  ship31.pbm  ship42.ppm  ship54.pbm
 
EXTRA_DIST = $(ship2_DATA)
